--- a/discussion/app/views/fragments/commentsBody.scala.html
+++ b/discussion/app/views/fragments/commentsBody.scala.html
@@ -3,7 +3,7 @@
 <div class="d-discussion">
 	<ul class="d-thread">
 	    @page.comments.map{ comment =>
-	        @fragments.commentThread(comment)
+	        @fragments.comment(comment)
 	    }
 	</ul>
 </div>
