--- a/common/app/views/fragments/commonJavaScriptSetup.scala.html
+++ b/common/app/views/fragments/commonJavaScriptSetup.scala.html
@@ -27,22 +27,24 @@
             }
         };
 
-    (function loadFontsFromStorage(prefs, key) {
+    function loadFontsFromStorage(prefs, key) {
 
-        var showFonts = false;
+        var showFonts = false,
+            fontPreference = localStorage['gu.prefs.switch.font-family'],
+            fontSwitch = (fontPreference) ? JSON.parse(fontPreference).value : undefined;
+
         @if(FontSwitch.isSwitchedOn) {
             showFonts = true;
         }
-        if (localStorage['gu.prefs.switch.font-family'] === true) {
+
+        if (fontSwitch === true) {
             showFonts = true;
-        } else
-        if (localStorage['gu.prefs.switch.font-family'] === false) {
+        } else if (fontSwitch === false && fontPreference) {
             showFonts = false;
         }
 
         if (showFonts) {
 
-            var start = (new Date().getTime());
             var styleNodes = document.querySelectorAll('[data-cache-name]');
             for (var i = 0, j = styleNodes.length; i<j; ++i) {
                 var style = styleNodes[i],
@@ -58,23 +60,18 @@
                     document.querySelector('html').className += ' font-' + nameAndCacheKey[1] + '-loaded';
                 }
             }
-            var fontTime = (new Date().getTime()) - start;
-            if (fontTime > 50) {
-                var img = document.createElement("img");
-                img.style = "display: none";
-                img.src = "//beacon." + window.location.hostname +  "/px.gif?fonts/&fonttime=" + fontTime;
-                document.getElementsByTagName("head")[0].appendChild(img);
-            }
 
             // This cleans up legacy webfontdelay tests. Remove these at some point.
             localStorage.removeItem('gu.webfontrendertest');
             localStorage.removeItem('gu.fontdelaytest');
         }
-    })();
+    }
 
     (function(isModern) {
 
         if (!isModern) { return false; }
+
+        loadFontsFromStorage();
 
         guardian.config = @fragments.javaScriptConfig(item, switches);
 
