--- a/article/app/views/fragments/articleBody.scala.html
+++ b/article/app/views/fragments/articleBody.scala.html
@@ -59,7 +59,7 @@
 @if(DiscussionSwitch.isSwitchedOn && article.isCommentable) {
     <div class="article__discussion"></div>
     <a class="d-show-cta js-show-discussion js-top" href="/discussion/@article.shortUrlId" data-link-name="View all comments">
-        View all comments <span class="d-commentcount speech-bubble"></span>
+        View all comments <span class="d-commentcount speech-bubble"><span class="js-commentcount__number"></span></span>
     </a>
 }
 
