--- a/discussion/app/views/fragments/comment.scala.html
+++ b/discussion/app/views/fragments/comment.scala.html
@@ -23,9 +23,9 @@
                 <div>
                     @*********************
                     Responding to...
-                    <a href="#" class="d-comment__meta-item">@@Kaelig</a> <span class="d-meta-separator">&nbsp;|&nbsp;</span>
+                    <a href="#" class="d-meta-item d-comment__meta-item">@@Kaelig</a> <span class="d-meta-separator">&nbsp;|&nbsp;</span>
                     *********************@
-                    <time class="d-comment__meta-item js-timestamp"
+                    <time class="d-meta-item d-comment__meta-item js-timestamp"
                           datetime="@comment.date.toString("yyyy-MM-dd'T'HH:mm:ss'Z'")" data-timestamp="@comment.date.getMillis">
                         @Format(comment.date, "d MMM y")
                     </time>
