--- a/common/app/assets/stylesheets/theme/_icons.scss
+++ b/common/app/assets/stylesheets/theme/_icons.scss
@@ -15,7 +15,7 @@
 }
 
 .i-sport-arrow-small {
-    margin: 0 0 -1px $baseline;
+    margin: 0 0 -1px $baseline*2;
 }
 
 .is-active .i-arrow-small-down {
